a little bit of numpy

--- a/Home Work/HW-1/z1_NumPy.ipynb
+++ b/Home Work/HW-1/z1_NumPy.ipynb
@@ -16,10 +16,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(100, int)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,10 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones(100, int)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +87,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full(100, 3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +118,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add(x1, x2, /, out=None, *, where=True, casting='same_kind', order='K', dtype=None, subok=True[, signature, extobj])\n",
+      "\n",
+      "Add arguments element-wise.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "x1, x2 : array_like\n",
+      "    The arrays to be added.  If ``x1.shape != x2.shape``, they must be\n",
+      "    broadcastable to a common shape (which may be the shape of one or\n",
+      "    the other).\n",
+      "out : ndarray, None, or tuple of ndarray and None, optional\n",
+      "    A location into which the result is stored. If provided, it must have\n",
+      "    a shape that the inputs broadcast to. If not provided or `None`,\n",
+      "    a freshly-allocated array is returned. A tuple (possible only as a\n",
+      "    keyword argument) must have length equal to the number of outputs.\n",
+      "where : array_like, optional\n",
+      "    Values of True indicate to calculate the ufunc at that position, values\n",
+      "    of False indicate to leave the value in the output alone.\n",
+      "**kwargs\n",
+      "    For other keyword-only arguments, see the\n",
+      "    :ref:`ufunc docs <ufuncs.kwargs>`.\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "add : ndarray or scalar\n",
+      "    The sum of `x1` and `x2`, element-wise.\n",
+      "    This is a scalar if both `x1` and `x2` are scalars.\n",
+      "\n",
+      "Notes\n",
+      "-----\n",
+      "Equivalent to `x1` + `x2` in terms of array broadcasting.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> np.add(1.0, 4.0)\n",
+      "5.0\n",
+      ">>> x1 = np.arange(9.0).reshape((3, 3))\n",
+      ">>> x2 = np.arange(3.0)\n",
+      ">>> np.add(x1, x2)\n",
+      "array([[  0.,   2.,   4.],\n",
+      "       [  3.,   5.,   7.],\n",
+      "       [  6.,   8.,  10.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.info(np.add)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +183,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]\n",
+      " [11 12 13 14 15]\n",
+      " [16 17 18 19 20]\n",
+      " [21 22 23 24 25]]\n",
+      "\n",
+      "[[11 12 13 14 15]\n",
+      " [ 6  7  8  9 10]\n",
+      " [ 1  2  3  4  5]\n",
+      " [16 17 18 19 20]\n",
+      " [21 22 23 24 25]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = np.arange(1, 26).reshape(5, 5)\n",
+    "print(matrix)\n",
+    "print()\n",
+    "matrix[[0, 2]] = matrix[[2, 0]]\n",
+    "print(matrix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,10 +221,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27\n",
+      "  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45\n",
+      "  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63\n",
+      "  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81\n",
+      "  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99\n",
+      " 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector = np.arange(10, 101)\n",
+    "print(vector)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +254,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vector = np.arange(10, 101)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,10 +267,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = np.arange(16).reshape(4, 4)\n",
+    "print(matrix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,10 +309,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 0, 1]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.identity(3, int)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -633,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
