kaggle Titanic done

--- a/Home Work/HW-3/Task2/Task2.ipynb
+++ b/Home Work/HW-3/Task2/Task2.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%config IPCompleter.greedy=True\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pylab as pl\n",
@@ -390,7 +391,7 @@
    "source": [
     "features = data_dummies.loc[:, :'safety_med']\n",
     "x = features.values\n",
-    "y = df['class'].values\n"
+    "y = df['class'].values"
    ]
   },
   {
