--- a/Home Work/HW-3/Task1/Task1.ipynb
+++ b/Home Work/HW-3/Task1/Task1.ipynb
@@ -17,9 +17,11 @@
     "import pandas as pd\n",
     "import pylab as pl\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('ggplot')\n",
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
     "%matplotlib inline\n",
-    "import seaborn as sns"
+    "plt.style.use('ggplot')"
    ]
   },
   {
@@ -393,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -413,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Поиск наилучшего дерева путем перебора комбинаций max_depth, criterion, min_samples_leaf"
+    "### Поиск наилучшего дерева путем перебора комбинаций max_depth(5, 100), criterion('gini', 'entropy'), min_samples_leaf(1, 20)"
    ]
   },
   {
