Kaggle markdown fixed

--- a/Kaggle/Titanic.ipynb
+++ b/Kaggle/Titanic.ipynb
@@ -20,7 +20,7 @@
     "import seaborn as sns\n",
     "\n",
     "\n",
-    "plt.style.use('ggplot')`\n",
+    "plt.style.use('ggplot')\n",
     "%matplotlib inline"
    ]
   },
@@ -299,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Предпроцессинг данных"
+    "## Препроцессинг данных"
    ]
   },
   {
@@ -1027,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Применение преобразований аналогичных тестовой выборке  "
+    "### Применение преобразований аналогичных тренировочной выборке  "
    ]
   },
   {
